--- a/producto-1.html
+++ b/producto-1.html
@@ -46,8 +46,8 @@
                 <button class="prev" onclick="prevSlide()">&#10094;</button>
                     <div class="slider-container">
                         <img src="img/2pac.jpg" alt="Vista 1" class="slide active">
-                        <img src="producto2.jpg" alt="Vista 2" class="slide">
-                        <img src="producto3.jpg" alt="Vista 3" class="slide">
+                        <img src="img/2pac.jpg" alt="Vista 2" class="slide">
+                        <img src="img/2pac.jpg" alt="Vista 3" class="slide">
                     </div>
                 <button class="next" onclick="nextSlide()">&#10095;</button>
             </div>
